<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logo_desc"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        
        <TextView
            android:id="@+id/heading"
            android:text="@string/headingMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/heading"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input"/>

        <TextView
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/lastname"/>

        <EditText
            android:id="@+id/lastnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input"/>

        <TextView
            android:id="@+id/className"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/className"/>

        <EditText
            android:id="@+id/classNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/input"/>

        <Button
            android:id="@+id/buttonMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="@string/button"/>


        
    </LinearLayout>

</LinearLayout>